﻿Changelog

v7
+ Installation now shows proper percentage progress
+ Completely reworked 7z handling
++ Console tab removed since no more use
+ Now detects if mods are valid
++ Also checks if actual mod is inside 7z
+ Rewritten preview loading
+ Added modpacks
+ Now checks for free space on required drives

v6.3
+ Added force installation
+ Mod filters have been fixed (thanks hard-linker anon)

v6.2
+ Added a registry fixer
+ New form that shows pending changes
+ Dialog asking if you want to synchronize

v6.1.1
+ Improved mod deletion again
+ UI performance improvements
+ Fixed preferences being able to be modified when not enabled

v6.1
+ Fixed issue with console not displaying output
+ Added a splash screen to offload UI startup logic
+ Updated mod deletion

v6
+ Major backend overhaul, config related issues are now simple to fix (if they even arise)
+ Much more aggressive flush config
+ Now handles crashes in the program itself, so you can send me proper error dumps
+ Config files are now GZip compressed (stored as config.json.gz)
+ Taskbar now shows progress
+ Added the ability to delete mods from the main view
+ Prompts user if file is in use when trying to delete a file
+ Pretty new dialogs
+ Fixed more small UI bugs
+ Officially now a stable build

Pre5.2.2
+ Fixed not deleting files when there are no subfiles detected
+ Added a search bar
+ Built this version with optimization option in compiler

Pre5.2.1
+ Fixed more issues with Wizzard Migrator
+ Fixed popup asking if it had installed correctly (for Win 7 - 10)
+ Removed the requirement for administrator access
+ Added a mediocre icon

Pre5.2
+ Merged Wizzard Migrator into the main program
+ Added a (proper) logging system
+ Added the ability to be able to cancel an operation (provided it's at a possible time)
+ Added tracking for when mods have been installed
+ Added a warning when collisions are detected and how the user can resolve it